[package]
name = "pagoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0"
assert-json-diff = "2.0"
clap = { version = "3.1", features = ["color", "suggestions", "wrap_help"] }
dirs = "4.0"
log = "0.4"
pretty_env_logger = "0.4"
rusqlite = { version = "0.28", features = ["bundled"] }
rusqlite_migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["sync"] }

[dev-dependencies]

# Optimization parameters
# @see https://github.com/johnthagen/min-sized-rust
# These params have to be compared with the base bundle
# size everytime you want to optimize your build, because
# it might actually make your binary heavier! Be careful.
[profile.release]
strip = true       # Automatically strip symbols from the binary
opt-level = "z"    # Optimize for size
lto = true         # Enable Link Time Optimization (LTO)
codegen-units = 1  # Reduce parallel code generation units to increase optimization
